tests/transpiler/x/ocaml/for_list_collection.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/for_list_collection.ml", line 7, characters 9-17:
7 |     with Continue -> ()) [1; 2; 3] with Break -> ())
             ^^^^^^^^
Error: This variant pattern is expected to have type exn
       There is no constructor Continue within type exn
