tests/transpiler/x/ocaml/for_list_collection.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  (try List.iter (fun n ->
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int n]));
    with Continue -> ()) [1; 2; 3] with Break -> ())
